# resender-bot

./: .gitignore  pyproject.toml
src/: bot.py  config_reader.py  logging_setup.py
