[build-system]
requires = ["setuptools>=58.0.4", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resendertgbot"
description = "Resend messages"
version = "0.0.1"
authors = [
    { name = "greed", email = "greed1703@yandex.ru" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'Telethon>=1.36.0',
    'pydantic-settings>=2.3.0',
    'aiogram>=3.11.0'
]
requires-python = ">=3.11"

[project.scripts]
client-run = "bot:main"